@@ -2,7 +2,7 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.05 [20100328] [svn: r146]
+ChangeLog for sdparm-1.05 [20100331] [svn: r148]
   - add '--readonly' option especially for '-C start' and
     '-C stop' on ATA disks.
   - Control mode page updates (spc4r23)
@@ -11,6 +11,9 @@ ChangeLog for sdparm-1.05 [20100328] [svn: r146]
   - extended inquiry VPD page: activate_microcode+r_sup (spc4r23)
   - Automation device serial number and Data transfer device
     element address VPD pages (ssc4r01)
+  - add SBC Referrals VPD page (sbc3r22)
+  - expand SBC Thin provisioning VPD page (sbc3r22)
+  - expand SBC Block limits VPD page (sbc3r22)
   - SAS-2.1 specification split, upper layers placed in SPL
     - add enable_slumber and enable_partial fields to
       Enhanced phy control mode page
